nodes/kenaz.k8s/kvasir/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kvasir
  namespace: kvasir
spec:
  selector:
    app: kvasir
  ports:
    - name: http
      port: 80
      targetPort: http
